5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1662_1399.log
== TEST (2019-04-15 14:05:09) 
-- CODE:
qa - int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
qd + qa = 100 * 100
qd = qa - 100 * 100
qa = qd - 100 * 100
if qa > qd:
	m = "Ambrosio Rutra"
	print(qd)
else:
	m = "Demelza Olecram"
	print(qa)
	
-- ERROR:
File "XXXX", line 3
    qd + qa = 100 * 100
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:05:29) 
-- CODE:
qa - int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
qd + qa == 100 * 100
qd = qa - 100 * 100
qa = qd - 100 * 100
if qa > qd:
	m = "Ambrosio Rutra"
	print(qd)
else:
	m = "Demelza Olecram"
	print(qa)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qa - int(input())
NameError: name 'qa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:06:08) 
-- CODE:
qa - int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))

qd = qa - 1
qa = qd - 1
if qa > qd:
	m = "Ambrosio Rutra"
	print(qd)
else:
	m = "Demelza Olecram"
	print(qa)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qa - int(input())
NameError: name 'qa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:06:17) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))

qd = qa - 1
qa = qd - 1
if qa > qd:
	m = "Ambrosio Rutra"
	print(qd)
else:
	m = "Demelza Olecram"
	print(qa)
	
-- OUTPUT:
54539998
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:06:27) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))

qd = qa - 1
qa = qd - 1
if qa > qd:
	m = "Ambrosio Rutra"
	print(qd)
else:
	m = "Demelza Olecram"
	print(qa)
	
-- EXECUTION TIME:
0.204369
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
54539998
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
1254543
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
4998
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:07:14) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))

qd = qa - 1
qa = qd - 1
if qa > qd:
	m = "Ambrosio Rutra"
	print(round(qd/100, 2))
else:
	m = "Demelza Olecram"
	print(round(qa/100, 2))
	
-- OUTPUT:
545399.98
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:07:25) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))

qd = qa - 1
qa = qd - 1
if qa > qd:
	m = "Ambrosio Rutra"
	print(round(qd/100, 2))
else:
	m = "Demelza Olecram"
	print(round(qa/100, 2))
	
-- EXECUTION TIME:
0.15144
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
545399.98
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
12545.43
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
49.98
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:08:12) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
total = qd + qa
if qa > qd:
	m = "Ambrosio Rutra"
	print(round(qd/100, 2))
else:
	m = "Demelza Olecram"
	print(round(qa/100, 2))
	
-- OUTPUT:
258500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:08:19) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
total = qd + qa
if qa > qd:
	m = "Ambrosio Rutra"
	print(round(qd/100, 2))
else:
	m = "Demelza Olecram"
	print(round(qa/100, 2))
	
-- EXECUTION TIME:
0.134452
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
258500.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
12545.45
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
50.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:18:11) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	print(round(qa, 2))
else: 
	m = "Demelza Olecram"
	print(round(qd, 2))
	
-- OUTPUT:
54540000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:18:37) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	print(round(qa, 2))
else: 
	m = "Demelza Olecram"
	print(round(qd, 2))
print(m)	
-- OUTPUT:
54540000
Ambrosio Rutra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:19:32) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / 100
else: 
	m = "Demelza Olecram"
	m2 = qd / 100
print(m)
print(m2)
-- OUTPUT:
Ambrosio Rutra
545400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:19:39) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / 100
else: 
	m = "Demelza Olecram"
	m2 = qd / 100
print(m)
print(m2)
-- EXECUTION TIME:
0.195505
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
545400.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
222254.69
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
80.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:20:01) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / 100
else: 
	m = "Demelza Olecram"
	m2 = qd / 100
print(m)
print(round(m2, 2))
-- OUTPUT:
Ambrosio Rutra
545400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:20:12) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / 100
else: 
	m = "Demelza Olecram"
	m2 = qd / 100
print(m)
print(round(m2, 2))
-- EXECUTION TIME:
0.225887
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
545400.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
222254.69
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
80.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:20:39) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa // 100
else: 
	m = "Demelza Olecram"
	m2 = qd // 100
print(m)
print(round(m2, 2))
-- EXECUTION TIME:
0.178538
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
545400
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
222254
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
80
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:20:48) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / 100
else: 
	m = "Demelza Olecram"
	m2 = qd / 100
print(m)
print(round(m2, 2))
-- EXECUTION TIME:
0.145976
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
545400.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
222254.69
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
80.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:21:23) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = (qa / 100)
else: 
	m = "Demelza Olecram"
	m2 = (qd / 100)
print(m)
print(round(m2, 2))
-- EXECUTION TIME:
0.113166
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
545400.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
222254.69
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
80.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:21:29) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = (qa / 100)
else: 
	m = "Demelza Olecram"
	m2 = (qd / 100)
print(m)
print(round(m2, 2))
-- OUTPUT:
Ambrosio Rutra
545400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:22:13) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / 1000
else: 
	m = "Demelza Olecram"
	m2 = qd / 1000
print(m)
print(round(m2, 2))
-- OUTPUT:
Ambrosio Rutra
54540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:22:28) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / 10000
else: 
	m = "Demelza Olecram"
	m2 = qd / 10000
print(m)
print(round(m2, 2))
-- OUTPUT:
Ambrosio Rutra
5454.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:22:39) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / 10000
else: 
	m = "Demelza Olecram"
	m2 = qd / 10000
print(m)
print(round(m2, 2))
-- EXECUTION TIME:
0.175885
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
5454.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
2222.55
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
0.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:22:56) 
-- CODE:
qa = float(input("votos para ambrosio"))
qd = float(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / 10000
else: 
	m = "Demelza Olecram"
	m2 = qd / 10000
print(m)
print(round(m2, 2))
-- EXECUTION TIME:
0.200893
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
5454.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
2222.55
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
0.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:22:58) 
-- CODE:
qa = float(input("votos para ambrosio"))
qd = float(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / 10000
else: 
	m = "Demelza Olecram"
	m2 = qd / 10000
print(m)
print(round(m2, 2))
-- OUTPUT:
Ambrosio Rutra
5454.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:23:07) 
-- CODE:
qa = float(input("votos para ambrosio"))
qd = float(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / 10000
else: 
	m = "Demelza Olecram"
	m2 = qd / 10000
print(m)
print(round(m2, 2))
-- EXECUTION TIME:
0.152542
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
5454.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
2222.55
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
0.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:23:12) 
-- CODE:
qa = float(input("votos para ambrosio"))
qd = float(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / 100
else: 
	m = "Demelza Olecram"
	m2 = qd / 100
print(m)
print(round(m2, 2))
-- EXECUTION TIME:
0.147437
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
545400.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
222254.69
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
80.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:23:13) 
-- CODE:
qa = float(input("votos para ambrosio"))
qd = float(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / 100
else: 
	m = "Demelza Olecram"
	m2 = qd / 100
print(m)
print(round(m2, 2))
-- OUTPUT:
Ambrosio Rutra
545400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:24:31) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / 100
else: 
	m = "Demelza Olecram"
	m2 = qd / 100
print(m)
print(round(m2, 2))
-- OUTPUT:
Ambrosio Rutra
545400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:25:21) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / 100
else: 
	m = "Demelza Olecram"
	m2 = qd / 100
print(m)
print(round(m2, 2))
-- EXECUTION TIME:
0.212366
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
545400.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
222254.69
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
80.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:26:19) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa * 100
else: 
	m = "Demelza Olecram"
	m2 = qd * 100
print(m)
print(round(m2, 2))
-- EXECUTION TIME:
0.143925
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
5454000000
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
2222546900
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
800000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:26:20) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa * 100
else: 
	m = "Demelza Olecram"
	m2 = qd * 100
print(m)
print(round(m2, 2))
-- OUTPUT:
Ambrosio Rutra
5454000000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:27:41) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
total = qa + qd
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / total
else: 
	m = "Demelza Olecram"
	m2 = qd / total
print(m)
print(round(m2, 2))
-- OUTPUT:
Ambrosio Rutra
0.68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:27:53) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
total = qa + qd
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / total
else: 
	m = "Demelza Olecram"
	m2 = qd / total
print(m)
print(round(m2, 2))
-- EXECUTION TIME:
0.16907
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
0.68
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
0.95
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
0.62
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:28:01) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
total = qa + qd
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / total * 100
else: 
	m = "Demelza Olecram"
	m2 = qd / total * 100
print(m)
print(round(m2, 2))
-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:28:10) 
-- CODE:
qa = int(input("votos para ambrosio"))
qd = int(input("votos para demelza"))
total = qa + qd
if qa > qd:
	m = "Ambrosio Rutra"
	m2 = qa / total * 100
else: 
	m = "Demelza Olecram"
	m2 = qd / total * 100
print(m)
print(round(m2, 2))
-- EXECUTION TIME:
0.132687
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
94.66
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
61.54
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
